--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <meta name="msapplication-TileImage" content="%PUBLIC_URL%/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
-    <title>frontshift.</title>
+    <title>frontshift. - consultancy & development</title>
   </head>
   <body>
     <noscript>
